# oxipng

./: .codeclimate.yml  .dockerignore  .editorconfig  .gitignore  .pre-commit-hooks.yaml  .travis.yml  CHANGELOG  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  MANUAL.txt  README.md  README.template.md  SECURITY.md  appveyor.yml  build.rs  clippy.toml  index.html  package-lock.json  package.json
.cargo/: config.toml
.github/workflows/: deploy.yml  docker.yml  oxipng.yml
benches/: bench.py  deflate.rs  filters.rs  interlacing.rs  libdeflater.rs  reductions.rs  strategies.rs  zopfli.rs
ci/: before_deploy.sh  script.sh
doc/: search-index.js
doc/aho_corasick/: index.html  struct.AcAutomaton.html  struct.Dense.html  struct.FullAcAutomaton.html  struct.Match.html  struct.Matches.html  struct.MatchesOverlapping.html  struct.Sparse.html  struct.StreamMatches.html  struct.StreamMatchesOverlapping.html  trait.Automaton.html  trait.Transitions.html  type.StateIdx.html
doc/ansi_term/: enum.Colour.html  index.html  sidebar-items.js  struct.ANSIString.html  struct.ANSIStrings.html  struct.Style.html
doc/bit_vec/: index.html  struct.BitVec.html  struct.Blocks.html  struct.IntoIter.html  struct.Iter.html  trait.BitBlock.html
doc/bitflags/: index.html  macro.bitflags!.html  sidebar-items.js
doc/byteorder/: enum.BigEndian.html  enum.Error.html  enum.LittleEndian.html  index.html  trait.ByteOrder.html  trait.ReadBytesExt.html  trait.WriteBytesExt.html  type.NativeEndian.html  type.NetworkEndian.html  type.Result.html
doc/clap/: enum.AppSettings.html  enum.ClapErrorType.html  enum.ErrorKind.html  enum.Format.html  index.html  macro._clap_count_exprs!.html  macro.arg_enum!.html  macro.clap_app!.html  macro.crate_version!.html  macro.simple_enum!.html  macro.value_t!.html  macro.value_t_or_exit!.html  macro.values_t!.html  macro.values_t_or_exit!.html  sidebar-items.js  struct.App.html  struct.Arg.html  struct.ArgGroup.html  struct.ArgMatches.html  struct.ClapError.html  struct.Error.html  struct.SubCommand.html  type.Result.html
doc/crc/: index.html  sidebar-items.js
doc/crossbeam/: fn.scope.html  fn.spawn_unsafe.html  index.html  struct.Scope.html  struct.ScopedJoinHandle.html
doc/kernel32/: index.html
doc/lazy_static/: index.html  macro.lazy_static!.html
doc/libc/: constant.ABDAY_1.html  constant.ABDAY_2.html  constant.ABDAY_3.html  constant.ABDAY_4.html  constant.ABDAY_5.html  constant.ABDAY_6.html  constant.ABDAY_7.html  constant.ABMON_1.html  constant.ABMON_10.html  constant.ABMON_11.html  constant.ABMON_12.html  constant.ABMON_2.html  constant.ABMON_3.html  constant.ABMON_4.html  constant.ABMON_5.html  constant.ABMON_6.html  constant.ABMON_7.html  constant.ABMON_8.html  constant.ABMON_9.html  constant.AF_INET.html  constant.AF_INET6.html  constant.AF_UNIX.html  constant.ALT_DIGITS.html  constant.AM_STR.html  constant.BRKINT.html  constant.BS0.html  constant.BS1.html  constant.BUFSIZ.html  constant.CLOCAL.html  constant.CODESET.html  constant.CR0.html  constant.CR1.html  constant.CR2.html  constant.CR3.html  constant.CREAD.html  constant.CRNCYSTR.html  constant.CRTSCTS.html  constant.CS5.html  constant.CS6.html  constant.CS7.html  (+1268 more)
doc/libz_sys/: constant.Z_ASCII.html  constant.Z_BEST_COMPRESSION.html  constant.Z_BEST_SPEED.html  constant.Z_BINARY.html  constant.Z_BLOCK.html  constant.Z_BUF_ERROR.html  constant.Z_DATA_ERROR.html  constant.Z_DEFAULT_COMPRESSION.html  constant.Z_DEFAULT_STRATEGY.html  constant.Z_DEFLATED.html  constant.Z_ERRNO.html  constant.Z_FILTERED.html  constant.Z_FINISH.html  constant.Z_FIXED.html  constant.Z_FULL_FLUSH.html  constant.Z_HUFFMAN_ONLY.html  constant.Z_MEM_ERROR.html  constant.Z_NEED_DICT.html  constant.Z_NO_COMPRESSION.html  constant.Z_NO_FLUSH.html  constant.Z_OK.html  constant.Z_PARTIAL_FLUSH.html  constant.Z_RLE.html  constant.Z_STREAM_END.html  constant.Z_STREAM_ERROR.html  constant.Z_SYNC_FLUSH.html  constant.Z_TEXT.html  constant.Z_TREES.html  constant.Z_UNKNOWN.html  constant.Z_VERSION_ERROR.html  enum.gzFile_s.html  enum.internal_state.html  fn.adler32.html  fn.adler32_combine.html  fn.compress.html  fn.compress2.html  fn.compressBound.html  fn.crc32.html  fn.crc32_combine.html  fn.deflate.html  (+66 more)
doc/memchr/: fn.memchr.html  fn.memchr2.html  fn.memchr3.html  fn.memrchr.html  index.html
doc/mempool/: index.html  sidebar-items.js  struct.Pool.html  type.CreateFn.html
doc/miniz_sys/: constant.MZ_BLOCK.html  constant.MZ_BUF_ERROR.html  constant.MZ_DATA_ERROR.html  constant.MZ_DEFAULT_STRATEGY.html  constant.MZ_DEFAULT_WINDOW_BITS.html  constant.MZ_DEFLATED.html  constant.MZ_ERRNO.html  constant.MZ_FINISH.html  constant.MZ_FULL_FLUSH.html  constant.MZ_MEM_ERROR.html  constant.MZ_NEED_DICT.html  constant.MZ_NO_FLUSH.html  constant.MZ_OK.html  constant.MZ_PARAM_ERROR.html  constant.MZ_PARTIAL_FLUSH.html  constant.MZ_STREAM_END.html  constant.MZ_STREAM_ERROR.html  constant.MZ_SYNC_FLUSH.html  constant.MZ_VERSION_ERROR.html  enum.mz_internal_state.html  fn.mz_crc32.html  fn.mz_deflate.html  fn.mz_deflateEnd.html  fn.mz_deflateInit2.html  fn.mz_deflateReset.html  fn.mz_inflate.html  fn.mz_inflateEnd.html  fn.mz_inflateInit2.html  index.html  struct.mz_stream.html  type.mz_alloc_func.html  type.mz_free_func.html
doc/num_cpus/: fn.get.html  index.html
doc/oxipng/: fn.optimize.html  fn.optimize_from_memory.html  index.html  sidebar-items.js  struct.Options.html
doc/regex/: enum.CaptureNames.html  enum.Error.html  enum.Regex.html  fn.is_match.html  fn.quote.html  index.html  sidebar-items.js  struct.CaptureNames.html  struct.Captures.html  struct.FindCaptures.html  struct.FindMatches.html  struct.NoExpand.html  (+12 more)
scripts/: compare.sh  manual.sh  oxiora.sh
src/: apng.rs  atomicmin.rs  cache.rs  cli.rs  colors.rs  compress.rs  display_chunks.rs  error.rs  evaluate.rs  filters.rs  headers.rs  interlace.rs  lib.rs  main.rs  options.rs  png.rs  rayon.rs  reduction.rs  sanity_checks.rs
tests/: filters.rs  flags.rs  interlaced.rs  interlacing.rs  lib.rs  oxipng.rs  raw.rs  reduction.rs  regression.rs  strategies.rs
xtask/: Cargo.toml
(+1593 files in other folders)
