[package]
authors = ["Joshua Holmer <jholmer.in@gmail.com>"]
categories = ["command-line-utilities", "compression"]
description = "A lossless PNG compression optimizer"
documentation = "https://docs.rs/oxipng"
edition = "2021"
exclude = ["tests/*", "bench/*"]
homepage = "https://github.com/shssoichiro/oxipng"
license = "MIT"
name = "oxipng"
repository = "https://github.com/shssoichiro/oxipng"
version = "8.0.0"
rust-version = "1.61.0"

[badges]
travis-ci = { repository = "shssoichiro/oxipng", branch = "master" }
maintenance = { status = "actively-developed" }

[[bin]]
doc = false
name = "oxipng"
path = "src/main.rs"
required-features = ["binary"]

[[bench]]
name = "zopfli"
required-features = ["zopfli"]

[dependencies]
zopfli = { version = "0.7.4", optional = true, default-features = false, features = ["std", "zlib"] }
rgb = "0.8.36"
indexmap = "1.9.3"
libdeflater = "0.14.0"
log = "0.4.18"
stderrlog = { version = "0.5.4", optional = true, default-features = false }
bitvec = "1.0.1"
rustc-hash = "1.1.0"

[dependencies.crossbeam-channel]
optional = true
version = "0.5.8"

[dependencies.filetime]
optional = true
version = "0.2.21"

[dependencies.rayon]
optional = true
version = "1.7.0"

[dependencies.clap]
version = "3.2.25"

[dependencies.wild]
optional = true
version = "2.1.0"

[dependencies.image]
optional = true
default-features = false
features = ["png"]
version = "0.24.6"

[build-dependencies]
rustc_version = "0.4.0"

[features]
binary = ["clap", "wild", "stderrlog"]
default = ["binary", "filetime", "parallel", "zopfli"]
parallel = ["rayon", "indexmap/rayon", "crossbeam-channel"]
freestanding = ["libdeflater/freestanding"]
sanity-checks = ["image"]

[lib]
name = "oxipng"
path = "src/lib.rs"

[profile.dev]
opt-level = 2

[profile.release]
lto = "thin"

[profile.dev.package.bitvec]
opt-level = 3
