[package]
authors = ["Joshua Holmer <jholmer.in@gmail.com>"]
categories = ["command-line-utilities", "compression"]
description = "A lossless PNG compression optimizer"
documentation = "https://docs.rs/oxipng"
edition = "2021"
exclude = [
  ".editorconfig",
  ".gitattributes",
  ".github/*",
  ".gitignore",
  ".pre-commit-hooks.yaml",
  "Dockerfile",
  "scripts/*",
  "tests/*",
]
homepage = "https://github.com/shssoichiro/oxipng"
license = "MIT"
name = "oxipng"
repository = "https://github.com/shssoichiro/oxipng"
version = "9.1.0"
rust-version = "1.74.0"

[badges]
travis-ci = { repository = "shssoichiro/oxipng", branch = "master" }
maintenance = { status = "actively-developed" }

[[bin]]
doc = false
name = "oxipng"
path = "src/main.rs"
required-features = ["binary"]

[[bench]]
name = "zopfli"
required-features = ["zopfli"]

[dependencies]
zopfli = { version = "0.8.0", optional = true, default-features = false, features = ["std", "zlib"] }
rgb = "0.8.37"
indexmap = "2.2.6"
libdeflater = "1.20.0"
log = "0.4.21"
bitvec = "1.0.1"
rustc-hash = "1.1.0"

[dependencies.env_logger]
optional = true
default-features = false
features = ["auto-color"]
version = "0.11.3"

[dependencies.crossbeam-channel]
optional = true
version = "0.5.12"

[dependencies.filetime]
optional = true
version = "0.2.23"

[dependencies.rayon]
optional = true
version = "1.10.0"

[dependencies.clap]
optional = true
version = "4.5.4"
features = ["wrap_help"]

[target.'cfg(windows)'.dependencies.glob]
optional = true
version = "0.3.1"

[dependencies.image]
optional = true
default-features = false
features = ["png"]
version = "0.25.1"

[build-dependencies]
clap = "4.5.4"
clap_mangen = "0.2.20"
rustc_version = "0.4.0"

[features]
binary = ["clap", "glob", "env_logger"]
default = ["binary", "filetime", "parallel", "zopfli"]
parallel = ["rayon", "indexmap/rayon", "crossbeam-channel"]
freestanding = ["libdeflater/freestanding"]
sanity-checks = ["image"]

[lib]
name = "oxipng"
path = "src/lib.rs"

[profile.dev]
opt-level = 2

[profile.release]
lto = "fat"
strip = "symbols"
panic = "abort"

[package.metadata.deb]
assets = [
    ["target/release/oxipng", "usr/bin/", "755"],
    ["target/generated/assets/oxipng.1", "usr/share/man/man1/", "644"],
    ["README.md", "usr/share/doc/oxipng/", "644"],
    ["CHANGELOG.md", "usr/share/doc/oxipng/", "644"],
]
