[package]
authors = ["Joshua Holmer <jholmer.in@gmail.com>"]
categories = ["command-line-utilities", "compression"]
description = "A lossless PNG compression optimizer"
keywords = ["png", "image-compression", "optimization", "multi-threading", "lossless"]
documentation = "https://docs.rs/oxipng"
edition = "2021"
exclude = [
  ".editorconfig",
  ".gitattributes",
  ".github/*",
  ".gitignore",
  ".pre-commit-hooks.yaml",
  "Dockerfile",
  "scripts/*",
  "tests/*",
  "xtask/*",
]
homepage = "https://github.com/shssoichiro/oxipng"
license = "MIT"
name = "oxipng"
repository = "https://github.com/shssoichiro/oxipng"
version = "9.1.3"
rust-version = "1.74.0"

[badges]
travis-ci = { repository = "shssoichiro/oxipng", branch = "master" }
maintenance = { status = "actively-developed" }

[[bin]]
doc = false
name = "oxipng"
path = "src/main.rs"
required-features = ["binary"]

[[bench]]
name = "zopfli"
required-features = ["zopfli"]

[dependencies]
zopfli = { version = "0.8.1", optional = true, default-features = false, features = ["std", "zlib"] }
rgb = "0.8.50"
indexmap = "2.6.0"
libdeflater = "1.22.0"
log = "0.4.22"
bitvec = "1.0.1"
rustc-hash = "2.0.0"

[dependencies.env_logger]
optional = true
default-features = false
features = ["auto-color"]
version = "0.11.5"

[dependencies.crossbeam-channel]
optional = true
version = "0.5.13"

[dependencies.filetime]
optional = true
version = "0.2.25"

[dependencies.rayon]
optional = true
version = "1.10.0"

[dependencies.clap]
optional = true
version = "4.5.21"
features = ["wrap_help"]

[target.'cfg(windows)'.dependencies.glob]
optional = true
version = "0.3.1"

[dependencies.image]
optional = true
default-features = false
features = ["png"]
version = "0.25.5"

[features]
binary = ["dep:clap", "dep:glob", "dep:env_logger"]
default = ["binary", "parallel", "zopfli", "filetime"]
parallel = ["dep:rayon", "indexmap/rayon", "dep:crossbeam-channel"]
freestanding = ["libdeflater/freestanding"]
sanity-checks = ["dep:image"]
zopfli = ["dep:zopfli"]
filetime = ["dep:filetime"]
system-libdeflate = ["libdeflater/dynamic"]

[lib]
name = "oxipng"
path = "src/lib.rs"

[profile.dev]
opt-level = 2

[profile.release]
lto = "fat"
strip = "symbols"
panic = "abort"

[package.metadata.deb]
assets = [
    ["target/release/oxipng", "usr/bin/", "755"],
    ["target/xtask/mangen/manpages/oxipng.1", "usr/share/man/man1/", "644"],
    ["README.md", "usr/share/doc/oxipng/", "644"],
    ["CHANGELOG.md", "usr/share/doc/oxipng/", "644"],
]
